--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 			<h1>Asteroids</h1>
 		</header>
 			<section id="content">
- <canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde"> </canvas>
-				</canvas>
-		    </section>
+<canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde"> </canvas>		    </section>
 	    <footer>
 		    W and S to accelerate, A and D to change direction, H to hyperspace
 	    </footer>
